# conceptify

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  index.html  justfile  package-lock.json  package.json  prd.md
.beads/: config.yaml  interactions.jsonl  issues.jsonl  metadata.json
.claude/agents/: easy-task-worker.md  hard-task-worker.md  high-complexity-worker.md  low-complexity-worker.md  medium-complexity-worker.md
crates/conceptify-cli/: Cargo.toml
crates/conceptify-cli/src/: main.rs
crates/conceptify-types/: Cargo.toml
crates/conceptify-types/src/: lib.rs
docs/: api.md  artifact-spec.md  cli.md  concurrency-policy.md  future-improvements.md  quick-start-ia.md  response-intent-contract.md  startup.md  work-log.md
prototypes/wkwebview-video-range/: README.md  main.swift
scripts/: setup.sh
skill/: SKILL.md  capabilities.json  design-system.css  design-system.md
skill/examples/: demo-artifact.html
skill/references/: follow-ups.md  rendering.md  self-review.md  video.md
skill/scripts/: highlight.mjs  postprocess-svg.mjs  render-video.mjs
skill/video/: README.md  package-lock.json  package.json  tsconfig.json
skill/video/examples/: data-flow.json  state-machine.json  step-sequence.json
skill/video/src/: Root.tsx  layout.ts  theme.ts  timing.ts
skill/video/src/components/: Stage.tsx
skill/video/src/compositions/: DataFlow.tsx  StateMachine.tsx  StepSequence.tsx
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/: bridge.js
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: anchoring.rs  artifact_diff.rs  artifact_protocol.rs  artifacts.rs  asset_protocol.rs  assets.rs  catalog.rs  catalog_snapshot.json  commands.rs  comments.rs  concept_map.rs  context.rs  export.rs  flows.rs  heygen.rs  learning.rs  lib.rs  live_bridge.rs  main.rs  project_context.rs  projects.rs  routing.rs  run_queue.rs  runs.rs  search.rs  settings.rs  skill_catalog.rs  synthesis.rs  threads.rs
src-tauri/src/db/: migrations.rs  mod.rs
src-tauri/src/server/: artifacts_routes.rs  assets_routes.rs  auth.rs  catalog_routes.rs  comments_routes.rs  mod.rs  net.rs  open_routes.rs  paths.rs  projects_routes.rs  routes.rs  search_routes.rs  settings_routes.rs  state.rs  threads_routes.rs  video_routes.rs
src/components/: ActivityTray.tsx  ArtifactCommentLayer.tsx  ArtifactDiffPanel.tsx  CommentComposer.tsx  CommentsSidebar.tsx  ConceptMapPanel.tsx  ConflictReview.tsx  GenerationView.tsx  ModelCombobox.tsx  ModelOverridePicker.tsx  NewThreadComposer.tsx  ProjectHome.tsx  ProjectSidebar.tsx  QuickSwitcher.tsx  ResponseProfilePicker.tsx  SettingsView.tsx  StatusChip.tsx  ThreadComparePanel.tsx  ThreadList.tsx  ThreadView.tsx
src/lib/: api.ts  bridge.ts  events.ts  models.ts  routing.ts  systemNotifications.ts  theme.ts  time.ts
src/store/: appStore.ts
tools/: live-harness.mjs
