[workspace]
resolver = "2"
members = [
    "src-tauri",
    "crates/conceptify-types",
    "crates/conceptify-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Chris Meehan <cdcmeehan@gmail.com>"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
