[workspace]
resolver = "2"
members = [
    "src-tauri",
    "crates/conceptify-types",
    "crates/conceptify-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Chris Meehan <cdcmeehan@gmail.com>"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Content-addressing for video assets (epic conceptify-z9y): the server
# re-hashes uploaded bodies (E-ASSET-HASH) and the CLI computes the URL sha.
# Already in the tree transitively, so this adds no build cost.
sha2 = "0.10"
